--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -59,13 +59,15 @@
   "noTitle": "geen titel",
   "or": "of",
   "history": "geschiedenis",
-  "notImplemented": "niet geimplementeerd",
+  "template": "sjabloon",
+  "notImplemented": "niet geïmplementeerd",
   "saveChanges": "Opslaan",
   "discardChanges": "Ongedaan maken",
   "advanced": "Geavanceerd",
   "shortcuts": "snelkoppeling",
   "help": "Help",
   "settings": "Instellingen",
+  "plugins": "Plug-ins",
   "cache": "cache",
   "file": "bestand",
   "webdav": "WebDAV",
@@ -107,13 +109,13 @@
   "genPresetHash128": "128-bit hash",
   "genPresetHash256": "256-bit hash",
   "grpTitle": "Groep",
-  "grpSearch": "Zoeken naar items toestaan",
-  "grpAutoType": "Auto-type toestaan",
+  "grpSearch": "Zoeken naar items in deze groep aanzetten",
+  "grpAutoType": "Auto-type aanzetten",
   "grpAutoTypeSeq": "Auto-type volgorde",
-  "grpAutoTypeSeqDefault": "Standaard auto-type volgorde gebruiken",
-  "grpTrash": "Groep met alle items verwijderen",
+  "grpAutoTypeSeqDefault": "Gebruik standaard auto-type volgorde",
+  "grpTrash": "Verwijder groep met alle items",
   "tagTitle": "Label",
-  "tagTrash": "Label van alle items verwijderen",
+  "tagTrash": "Verwijder Label van alle items",
   "tagRename": "Hernoemen",
   "tagTrashQuestion": "Label van alle items verwijderen?",
   "tagTrashQuestionBody": "Dit label wordt van alle items verwijderd. Er is geen gemakkelijke manier dit terug te zetten.",
@@ -125,7 +127,7 @@
   "genPsCreate": "Opslaan",
   "genPsDelete": "Verwijderen",
   "genPsNew": "voorinstelling",
-  "genPsEnabled": "Tonen in lijst met voorinstellingen",
+  "genPsEnabled": "Toon in voorinstellingen lijst",
   "genPsDefault": "Standaard geselecteerd",
   "genPsDefaultLength": "Standaard lengte",
   "genPsUpper": "Hoofdletters Latijns schrift",
@@ -134,9 +136,9 @@
   "genPsSpecial": "Speciale tekens",
   "genPsBrackets": "Haakjes",
   "genPsHigh": "Uitgebreide ASCII karakters",
-  "genPsAmbiguous": "Op elkaar lijkende tekens",
-  "genPsInclude": "Overige symbolen toestaan",
-  "genPsExample": "Voor van gegenereerd wachtwoord",
+  "genPsAmbiguous": "Dubbelzinnige symbolen",
+  "genPsInclude": "Extra symbolen toestaan",
+  "genPsExample": "Voorbeeld van gegenereerd wachtwoord",
   "keyChangeTitleRemote": "Hoofdsleutel gewijzigd",
   "keyChangeMessageRemote": "Hoofdsleutel was gewijzigd voor deze database. Kies een nieuwe sleutel",
   "keyChangeTitleExpired": "Hoofdsleutel verlopen",
@@ -150,6 +152,9 @@
   "listNoWebsite": "geen website",
   "listNoUser": "geen gebruiker",
   "listNoAttachments": "geen bijlagen",
+  "listAddTemplateHeader": "Sjablonen",
+  "listAddTemplateBody1": "Sjablonen helpen om nieuwe items te maken met 1 click. Voeg iets aan het sjabloon toe en klik nogmaals {} om het sjabloon te gebruiken.",
+  "listAddTemplateBody2": "Je kan altijd jouw sjablonen vinden in de {} groep",
   "searchAddNew": "Toevoegen",
   "searchSort": "Sorteren",
   "searchCreated": "Toegevoegd",
@@ -179,7 +184,7 @@
   "openDropHere": "sleep bestanden hier",
   "openFailedRead": "Kan bestand niet lezen",
   "openNothingFound": "Niks gevonden",
-  "openNothingFoundBody": "Bestanden konden niet geopend worden",
+  "openNothingFoundBody": "Geen bestanden om te openen",
   "openSelectFile": "Selecteer een bestand",
   "openSelectFileBody": "Selecteer een bestand dat u wilt openen",
   "openPassFor": "Wachtwoord",
@@ -194,7 +199,7 @@
   "openKdbFileBody": "Je probeert een oude versie te openen (KDB). Deze app ondersteund alleen nieuwe versies (KDBX). Gebruik KeePass v2 om deze te converteren.",
   "openConfigHeader": "{} Instellingen",
   "openUrl": "URL",
-  "openUrlDesc": "bestand",
+  "openUrlDesc": "https://server/pad/bestand.kdbx, of enkel bestand.kdbx",
   "openUser": "Gebruiker",
   "openUserDesc": "WebDAV server gebruiker (als vereist)",
   "openUserPlaceholder": "geen gebruiker",
@@ -210,10 +215,10 @@
   "detAttDelToRemove": "Delete om te verwijderen",
   "detEmpty": "Je wachtwoorden gaan hier weergegeven worden",
   "detGroupRestore": "Om deze groep te herstellen sleep je het naar een willekeurige groep buiten de prullenbak",
-  "detHistoryClickPoint": "Klik op het item geschiedenis tijdlijn punt om de staat te bekijken",
+  "detHistoryClickPoint": "Klik op het item geschiedenis tijdlijn punt om de status te bekijken",
   "detHistoryReturn": "terug naar item",
-  "detHistoryRevert": "Terug naar staat",
-  "detHistoryDel": "Versie verwijderen",
+  "detHistoryRevert": "Terug naar status",
+  "detHistoryDel": "Status verwijderen",
   "detHistoryEmpty": "leeg",
   "detHistoryModified": "gewijzigd",
   "detHistoryRec": "versie",
@@ -228,7 +233,7 @@
   "detSetIcon": "Wijzig icoon",
   "detDropAttachments": "Sleep bijlagen hierheen",
   "detDelEntry": "Verwijderen",
-  "detDelEntryPerm": "Permanent verwijderen",
+  "detDelEntryPerm": "Verwijder permanent",
   "detExpires": "Verloopt",
   "detExpired": "verlopen",
   "detGroup": "Groep",
@@ -236,7 +241,7 @@
   "detUpdated": "Gewijzigd",
   "detNetField": "Nieuw Veld",
   "detAttachments": "Bijlagen",
-  "detDelFromTrash": "Verwijderen in prullenbak?",
+  "detDelFromTrash": "Verwijder uit de prullenbak?",
   "detDelFromTrashBody": "U zult niet in staan zijn om het terug te zetten.",
   "detDelFromTrashBodyHint": "Om snel de prullenbak te legen, klik op het Prullenbak leegmaken icoon in het menu van de Prullenbak.",
   "detFieldCopied": "Gekopieërd",
@@ -254,6 +259,7 @@
   "detClone": "Dupliceer",
   "detClonedName": "Kopieër",
   "detAutoType": "Auto-type",
+  "detAutoTypeSettings": "Auto-type instellingen",
   "detAutoTypeEnabled": "Auto-type aanzetten voor dit item",
   "detAutoTypeSequence": "Toetsaanslagen",
   "detAutoTypeInput": "Opties",
@@ -294,7 +300,7 @@
   "appSecWarnBody1": "Je hebt de app geladen met een onveilig verbinding. Iemand kan mogelijk nu meekijken en je wachtwoorden stelen. Wij adviseren u te stoppen tenzij u natuurlijk begrijpt wat de consequenties zijn.",
   "appSecWarnBody2": "Ja, je database is versleuteld, maar dit is geen garantie dat de app niet gewijzigd is onderweg naar jou toe.",
   "appSecWarnBtn": "Ik begrijp de risico's, ga verder",
-  "appUnsavedWarn": "Niet-opgeslagen wijzigen",
+  "appUnsavedWarn": "Niet-opgeslagen wijzigingen",
   "appUnsavedWarnBody": "Als je de app nu sluit gaan alle niet-opgeslagen wijzigingen verloren.",
   "appDontExitBtn": "Niet afsluiten",
   "appCannotLockAutoInit": "De app can niet vergrendeld worden omdat automatisch opslaan is uitgeschakeld.",
@@ -302,9 +308,10 @@
   "appAutoSave": "Wijzigingen automatisch opslaan",
   "appSaveError": "Fout tijdens opslaan",
   "appSaveErrorBody": "Kon bestand niet automatisch opslaan",
-  "appSaveErrorBodyMul": "Bestanden die niet automatisch zijn opgeslagen:",
+  "appSaveErrorBodyMul": "Bestanden zijn niet automatisch zijn opgeslagen:",
   "appSettingsError": "Fout tijdens laden app",
   "appSettingsErrorBody": "Er is een fout opgetreden tijdens het laden van de app instellingen. Controleer de app URL of neem contact op met uw administrator.",
+  "appNotSupportedError": "Je browser wordt niet ondersteund.",
   "appTabWarn": "Te veel tabbladen",
   "appTabWarnBody": "KeeWeb kan niet tegelijkertijd in twee browser tabbladen worden gebruikt, sluit dit tabblad.",
   "setGenTitle": "Algemene instellingen",
@@ -329,7 +336,7 @@
   "setGenExtractingUpdate": "Update uitpakken...",
   "setGenCheckErr": "Er is een fout opgetreden bij het downloaden van de nieuwe versie",
   "setGenNeverChecked": "Nog nooit gezocht naar updates",
-  "setGenRestartToUpdate": "Applicatie",
+  "setGenRestartToUpdate": "Herstart de app om te updaten",
   "setGenDownloadAndRestart": "Update downloaden en herstarten",
   "setGenAppearance": "Uiterlijk",
   "setGenTheme": "Thema",
@@ -341,10 +348,15 @@
   "setGenThemeSd": "Overbelicht donker",
   "setGenThemeSl": "Overbelicht licht",
   "setGenLocale": "Taal",
+  "setGenLocOther": "overige talen zijn beschikbaar als plug-in",
   "setGenFontSize": "Lettergrootte",
   "setGenFontSizeNormal": "Normaal",
   "setGenFontSizeLarge": "Groot",
   "setGenFontSizeLargest": "Grootst",
+  "setGenTitlebarStyle": "Venster stijl (vereist herstart)",
+  "setGenTitlebarStyleDefault": "Standaard",
+  "setGenTitlebarStyleHidden": "Aangepaste titel",
+  "setGenTitlebarStyleHiddenInset": "Aangepaste titel, aanpasbaar venster",
   "setGenShowSubgroups": "Items weergeven van alle subgroepen",
   "setGenTableView": "Item lijst tabel weergave",
   "setGenColorfulIcons": "Kleurvolle eigen iconen in lijst",
@@ -367,6 +379,7 @@
   "setGenMinInstead": "Minimaliseer app in plaats van sluiten",
   "setGenLockMinimize": "Automatisch vergrendelen bij minimaliseren",
   "setGenLockCopy": "Automatisch vergrendelen bij kopiëren van wachtwoord",
+  "setGenLockAutoType": "Automatisch vergrendelen na auto-type",
   "setGenStorage": "Opslag",
   "setGenShowAdvanced": "Toon uitgebreide instellingen",
   "setGenDevTools": "Ontwikkelaar tools weergeven",
@@ -395,20 +408,20 @@
   "setFileNames": "Namen",
   "setFileDefUser": "Standaard gebruiker",
   "setFileEnableTrash": "Prullenbak aanzetten",
-  "setFileHistLen": "item",
-  "setFileHistSize": "bestand",
-  "setFileBackups": "Archieven",
-  "setFileBackupEnable": "bestand",
+  "setFileHistLen": "Lengte van historie, bewaar laatste records per invoer",
+  "setFileHistSize": "Grote van historie, totaal MB per bestand",
+  "setFileBackups": "Reservekopie",
+  "setFileBackupEnable": "Maak een reservekopie",
   "setFileBackupPath": "Bestandspad",
-  "setFileBackupTime": "Archieven maken",
+  "setFileBackupTime": "Maak reservekopieën",
   "setFileBackupNow": "Nu archiveren",
   "setFileBackupNowWorking": "Bezig...",
-  "setFileBackupError": "Fout met archiveren",
-  "setFileBackupErrorDescription": "bestand",
-  "setFileBackupOnSave": "bestand",
-  "setFileBackupDaily": "dagelijks",
+  "setFileBackupError": "Fout  tijdens maken reservekopie",
+  "setFileBackupErrorDescription": "Fout tijdens opslaan reservekopie",
+  "setFileBackupOnSave": "Elke keer bij opslaan van het bestand",
+  "setFileBackupDaily": "Dagelijks",
   "setFileBackupWeekly": "Wekelijks",
-  "setFileBackupMonthly": "maandelijks",
+  "setFileBackupMonthly": "Maandelijks",
   "setFileBackupManually": "Handmatig, niet automatisch archiveren",
   "setFileRounds": "Aantal versleutelingsrondes",
   "setFileKdfParams": "Sleutel afleidingsfunctie",
@@ -416,23 +429,23 @@
   "setFileKdfParamsMem": "Geheugen, KB",
   "setFileKdfParamsPar": "Parallelisme",
   "setFileKeyChangeForce": "Vraag om de sleutel aan te passen na (dagen)",
-  "setFileUseKeyFile": "Sleutelbestand",
-  "setFileUseGenKeyFile": "Sleutelbestand",
-  "setFileUseOldKeyFile": "Sleutelbestand",
-  "setFileGenKeyFile": "Sleutelbestand",
-  "setFileDontUseKeyFile": "Sleutelbestand",
-  "setFileEmptyPass": "wachtwoord",
-  "setFileEmptyPassBody": "wachtwoord",
-  "setFileSaveError": "Fout met opslaan",
-  "setFileSaveErrorBody": "bestand",
+  "setFileUseKeyFile": "Gebruik sleutelbestand",
+  "setFileUseGenKeyFile": "Gebruik aangemaakt sleutelbestand",
+  "setFileUseOldKeyFile": "Gebruik oude sleutelbestand",
+  "setFileGenKeyFile": "Gebruik nieuw sleutelbestand",
+  "setFileDontUseKeyFile": "Gebruik geen sleutelbestand",
+  "setFileEmptyPass": "Leeg wachtwoord",
+  "setFileEmptyPassBody": "Opslaan van de database zonder wachtwoord verwijderd alle bescherming. Wil je echt doorgaan?",
+  "setFileSaveError": "Fout tijdens opslaan",
+  "setFileSaveErrorBody": "Fout tijdens opslaan naar bestand",
   "setFileAlreadyExists": "Bestaat al",
   "setFileAlreadyExistsBody": "File {} bestaat al. Wilt u het overschrijven?",
   "setFileUnsaved": "Niet opgeslagen wijzigingen",
-  "setFileUnsavedBody": "bestand",
+  "setFileUnsavedBody": "Er zijn niet opgeslagen wijzigingen in dit bestand",
   "setFileCloseNoSave": "Sluiten en wijzigingen ongedaan maken",
   "setFileDontClose": "Niet sluiten",
   "setFileNoWebDavUpload": "Kan niet worden opgeslagen op WebDAV",
-  "setFileNoWebDavUploadBody": "applicatie",
+  "setFileNoWebDavUploadBody": "Nieuwe bestanden opslaan op WebDAV is momenteel niet ondersteund. Sla je bestand handmatig op en voeg toe aan de app.",
   "setShTitle": "Snelkoppelingen",
   "setShShowAll": "Toon alle items",
   "setShColors": "Toon items met kleuren",
@@ -455,6 +468,35 @@
   "setShCopyUrlGlobal": "kopieer website (met app op achtergrond)",
   "setShAutoTypeGlobal": "auto-type (met app op achtergrond)",
   "setShLock": "blokkeer database",
+  "setPlInstallTitle": "Installeer nieuwe plug-ins",
+  "setPlInstallDesc": "KeeWeb plug-ins voegen functies, thema's en vertalingen toe aan KeeWeb. Plug-ins werken met dezelfde privileges and KeeWeb, zij kunnen al je wachtwoorden benaderen en beheren. Installeer nooit plug-ins die je niet vertrouwd.",
+  "setPlInstallLabel": "Plug-in URL",
+  "setPlInstallBtn": "Installeer",
+  "setPlInstallBtnProgress": "Aan het installeren",
+  "setPlUninstallBtn": "De-installeren",
+  "setPlDisableBtn": "Uitschakelen",
+  "setPlEnableBtn": "Inschakelen",
+  "setPlUpdateBtn": "Bijwerken",
+  "setPlLocaleBtn": "Schakel naar deze vertaling",
+  "setPlThemeBtn": "Schakel naar dit thema",
+  "setPlJs": "code",
+  "setPlCss": "stijlen",
+  "setPlLoc": "taal",
+  "setPlCreatedBy": "Gemaakt door {}",
+  "setPlLoadTime": "duurde {} om te laden",
+  "setPlLastUpdate": "Laatste controle op updates",
+  "setPlLoadError": "Fout tijdens laden plug-in",
+  "setPlGalleryLoading": "Plug-ins laden, graag even geduld",
+  "setPlGalleryLoadError": "Fout tijdens laden plug-ins",
+  "setPlInstallUrlTitle": "Plug-in toevoegen via URL",
+  "setPlInstallUrlDesc": "Als de plug-in niet in de gallery staat, kan je handmatig toevoegen via URL",
+  "setPlOfficial": "Officiële KeeWeb plug-in",
+  "setPlSearch": "Zoeken naar plug-ins",
+  "setPlDevelop": "Wil je je eigen plug-ins ontwikkelen?",
+  "setPlDevelopStart": "Begin hier",
+  "setPlTranslate": "Of je kunt {}",
+  "setPlTranslateLink": "vertaal de app naar jouw taal",
+  "setPlAutoUpdate": "Automatisch aanpassen",
   "setAboutTitle": "Over",
   "setAboutBuilt": "Deze app is gemaakt met de volgende geweldige tools",
   "setAboutLic": "Licentie",
@@ -465,7 +507,7 @@
   "setHelpFormat": "Bestandsformaat",
   "setHelpFormatBody": "Dit is een port van de {} app gebouwd met web-technologie. Het begrijpt bestanden van het KeePass formaat (kdbx). U kunt zulke bestanden (wachtwoord databases) aanmaken in KeePass, of in deze app zelf. Het bestandsformaat is 100% compatibel en zou begrepen moeten worden door beide apps.",
   "setHelpProblems": "Hulp nodig ?",
-  "setHelpProblems1": "Als er iets mis gaat, {}",
+  "setHelpProblems1": "Als er iets mis gaat, graag {}",
   "setHelpProblems2": "of {}",
   "setHelpOpenIssue": "open een issue op GitHub",
   "setHelpContactLink": "neem direct contact op met een ontwikkelaar",
@@ -476,7 +518,7 @@
   "setHelpUpdates": "Updates",
   "setHelpTwitter": "Twitter app",
   "dropboxLogin": "Dropbox login",
-  "dropboxLoginBody": "Om door te kunnen gaan dient in in te loggen op Dropbox.",
+  "dropboxLoginBody": "Om door te kunnen gaan dient je in te loggen op Dropbox.",
   "dropboxSyncError": "Dropbox Synchronisatie Fout",
   "dropboxNotFoundBody": "Het bestand is niet gevonden. Is het verwijderd van een andere computer ?",
   "dropboxFull": "Dropbox vol",
@@ -497,6 +539,9 @@
   "dropboxLinkApp": "App folder (Apps/KeeWeb)",
   "dropboxLinkFull": "Volledige Dropbox of een folder",
   "dropboxLinkCustom": "Eigen Dropbox app",
+  "webdavSaveMethod": "Opslag methode",
+  "webdavSaveMove": "Sla een tijdelijk bestand op en verplaats",
+  "webdavSavePut": "Overschrijf kdbx bestand met PUT",
   "launcherSave": "Bewaar Passwords Database",
   "launcherFileFilter": "KeePass bestanden",
   "authPopupRequired": "Pop-ups zijn geblokkeerd",
