--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -153,6 +153,7 @@
   "listNoUser": "нет пользователя",
   "listNoAttachments": "нет вложений",
   "listAddTemplateHeader": "Шаблоны",
+  "listAddTemplateBody1": "Шаблоны позволяют создавать записи одним щелчком мыши. Добавьте что-то в шаблон, а затем нажмите {} еще раз, чтобы использовать этот шаблон.",
   "listAddTemplateBody2": "Вы всегда можете найти свои шаблоны в группе {}.",
   "searchAddNew": "Добавить новый",
   "searchSort": "Сортировать",
@@ -468,6 +469,7 @@
   "setShAutoTypeGlobal": "авто-ввод (при свёрнутой программе)",
   "setShLock": "блокировать базу данных",
   "setPlInstallTitle": "Установить новые плагины",
+  "setPlInstallDesc": "Плагины для KeeWeb добавляют новые функции, темы и языки. Плагины работают с теми же привилегиями, что и KeeWeb, они могут получать и управлять всеми вашими паролями. Никогда не устанавливайте плагины, которым вы не доверяете.",
   "setPlInstallLabel": "URL адрес плагина",
   "setPlInstallBtn": "Установить",
   "setPlInstallBtnProgress": "Установка",
@@ -481,17 +483,20 @@
   "setPlCss": "стили",
   "setPlLoc": "язык",
   "setPlCreatedBy": "Создано {}",
+  "setPlLoadTime": "потребовалось {} для загрузки",
   "setPlLastUpdate": "Последняя проверка обновлений",
   "setPlLoadError": "ошибка при загрузке плагина",
   "setPlGalleryLoading": "Загрузка плагинов, пожалуйста подождите немного",
   "setPlGalleryLoadError": "Ошибка при загрузке плагинов",
   "setPlInstallUrlTitle": "Добавить плагин по ссылке",
+  "setPlInstallUrlDesc": "Если плагин отсутствует в галерее, вы можете установить его вручную из URL-адреса",
   "setPlOfficial": "Официальный плагин KeeWeb",
   "setPlSearch": "Поиск плагинов",
   "setPlDevelop": "Хотите сделать свои собственные плагины?",
   "setPlDevelopStart": "Начать здесь",
   "setPlTranslate": "Или вы можете {}",
   "setPlTranslateLink": "Перевести приложение на ваш язык",
+  "setPlAutoUpdate": "Обновлять автоматически",
   "setAboutTitle": "О KeeWeb",
   "setAboutBuilt": "Это приложение построено с этими удивительными инструментами",
   "setAboutLic": "Лицензия",
@@ -535,6 +540,8 @@
   "dropboxLinkFull": "Полный Dropbox или любая папка",
   "dropboxLinkCustom": "Своё Dropbox-приложение",
   "webdavSaveMethod": "Метод сохранения",
+  "webdavSaveMove": "Загрузить временный файл и переместить",
+  "webdavSavePut": "Перезаписать файл kdbx с помощью PUT",
   "launcherSave": "Сохранение пароля базы данных",
   "launcherFileFilter": "KeePass файлы",
   "authPopupRequired": "Всплывающие окна заблокированы",
