--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -29,6 +29,12 @@
     "count": 460,
     "version": "1.2.0"
   },
+  "uk": {
+    "name": "Українська",
+    "nameEn": "Ukrainian",
+    "count": 505,
+    "version": "1.1.0"
+  },
   "no": {
     "name": "Norsk",
     "nameEn": "Norwegian",
@@ -38,8 +44,8 @@
   "nl-NL": {
     "name": "Nederlands",
     "nameEn": "Dutch",
-    "count": 460,
-    "version": "1.2.0"
+    "count": 505,
+    "version": "1.3.0"
   },
   "fr-FR": {
     "name": "Français",
@@ -62,8 +68,8 @@
   "ru-RU": {
     "name": "Русский",
     "nameEn": "Russian",
-    "count": 498,
-    "version": "1.2.0"
+    "count": 505,
+    "version": "1.3.0"
   },
   "es-ES": {
     "name": "Español",
