--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -497,6 +497,7 @@
   "setPlTranslate": "Oder {}",
   "setPlTranslateLink": "übersetzen Sie die App in Ihre Sprache",
   "setPlAutoUpdate": "Automatisch aktualisieren",
+  "setPlLoadGallery": "Plugin-Galerie laden",
   "setAboutTitle": "Über",
   "setAboutBuilt": "Diese App wurde mit den folgenden Werkzeugen erstellt",
   "setAboutLic": "Lizenz",
