--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -497,6 +497,7 @@
   "setPlTranslate": "O puedes {}",
   "setPlTranslateLink": "traducir la aplicación a tu idioma",
   "setPlAutoUpdate": "Actualizar automáticamente",
+  "setPlLoadGallery": "Cargar galería de complementos",
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
