--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -489,7 +489,7 @@
   "setPlGalleryLoading": "Chargement des modules, patientez un instant",
   "setPlGalleryLoadError": "erreur au chargement des modules",
   "setPlInstallUrlTitle": "Ajouter un module de l'URL",
-  "setPlInstallUrlDesc": "Si le module n'est pas dans la galerie, vous pouvez l'installer manuellement de l'URL",
+  "setPlInstallUrlDesc": "Si le module n'est pas dans le catalogue, vous pouvez l'installer manuellement de l'URL",
   "setPlOfficial": "Module officiel KeeWeb",
   "setPlSearch": "Rechercher des modules",
   "setPlDevelop": "Vous voulez développer vos propres modules ?",
@@ -497,6 +497,7 @@
   "setPlTranslate": "Ou vous pouvez {}",
   "setPlTranslateLink": "traduire l'aplli  dans votre langue",
   "setPlAutoUpdate": "Mise à jour automatique",
+  "setPlLoadGallery": "Charger le catalogue",
   "setAboutTitle": "A propos",
   "setAboutBuilt": "Cette appli est construite avec ces outils géniaux",
   "setAboutLic": "Licence",
