--- a/docs/translations/no/no.json
+++ b/docs/translations/no/no.json
@@ -67,6 +67,7 @@
   "shortcuts": "Snarveier",
   "help": "Hjelp",
   "settings": "Innstillinger",
+  "plugins": "Utvidelser",
   "cache": "Hurtiglager",
   "file": "Fil",
   "webdav": "WebDAV",
@@ -151,6 +152,9 @@
   "listNoWebsite": "Ingen nettside",
   "listNoUser": "Ingen bruker",
   "listNoAttachments": "Ingen vedlegg",
+  "listAddTemplateHeader": "Maler",
+  "listAddTemplateBody1": "Maler lar deg lage oppføringer med ett klikk. Legg til noe i oppføringsmalen, og klikk {} en gang til for å bruke denne malen",
+  "listAddTemplateBody2": "Du kan alltid finne malene dine i {}-gruppen",
   "searchAddNew": "Legg til ny",
   "searchSort": "Sorter",
   "searchCreated": "Opprettet",
@@ -255,6 +259,7 @@
   "detClone": "Lag en kopi",
   "detClonedName": "Kopiér",
   "detAutoType": "Autofyll",
+  "detAutoTypeSettings": "Innstillinger for autofyll",
   "detAutoTypeEnabled": "Aktiver auto-innfylling for denne oppføringen",
   "detAutoTypeSequence": "Tastetrykk",
   "detAutoTypeInput": "inndata",
@@ -306,6 +311,7 @@
   "appSaveErrorBodyMul": "Kunne ikke autolagre filer:",
   "appSettingsError": "Feil ved lasting av app",
   "appSettingsErrorBody": "Det skjedde en feil ved lasting av app-innstillinger. Vennligst dobbeltsjekk app-adressen, eller kontakt din administrator",
+  "appNotSupportedError": "Nettleseren din støttes ikke",
   "appTabWarn": "For mange faner",
   "appTabWarnBody": "KeeWeb kan ikke brukes i to nettleser-faner samtidig, vennligst lukk denne fanen.",
   "setGenTitle": "Generelle instillinger",
@@ -333,7 +339,7 @@
   "setGenRestartToUpdate": "Start om appen for å oppdatere",
   "setGenDownloadAndRestart": "Last ned oppdatering og start om",
   "setGenAppearance": "Utseende",
-  "setGenTheme": "Tema",
+  "setGenTheme": "Drakt",
   "setGenThemeFb": "Flat blå",
   "setGenThemeDb": "Mørk brun",
   "setGenThemeWh": "Hvit",
@@ -342,10 +348,15 @@
   "setGenThemeSd": "Overeksponert mørk",
   "setGenThemeSl": "Overeksponert lys",
   "setGenLocale": "Språk",
+  "setGenLocOther": "andre språk er tilgjengelige som utvidelser",
   "setGenFontSize": "Skriftstørrelse",
   "setGenFontSizeNormal": "Normal",
   "setGenFontSizeLarge": "Større",
   "setGenFontSizeLargest": "Størst",
+  "setGenTitlebarStyle": "Vindusstil (krever omstart)",
+  "setGenTitlebarStyleDefault": "Standard",
+  "setGenTitlebarStyleHidden": "Tilpasset tittel",
+  "setGenTitlebarStyleHiddenInset": "Tilpasset tittel, flyttbart vindu",
   "setGenShowSubgroups": "Vis oppføringer fra alle undergrupper",
   "setGenTableView": "Oppføringsliste i tabellvisning",
   "setGenColorfulIcons": "Fargerike egenvalgte ikoner i listen",
@@ -368,6 +379,7 @@
   "setGenMinInstead": "Minimér appen istedet for å lukke",
   "setGenLockMinimize": "Auto-lås ved minimering",
   "setGenLockCopy": "Auto-lås ved kopiering av passord",
+  "setGenLockAutoType": "Auto-lås ved autofylling",
   "setGenStorage": "Lagring",
   "setGenShowAdvanced": "Vis avanserte innstillinger",
   "setGenDevTools": "Vis utviklerverktøy",
@@ -443,7 +455,7 @@
   "setShCopyPass": "kopiér passord eller valgt felt",
   "setShCopyUser": "kopiér bruker",
   "setShCopyUrl": "kopiér nettside",
-  "setShAutoType": "auto-fyll valgte oppføring",
+  "setShAutoType": "auto-fyll den valgte oppføringen",
   "setShPrev": "gå til forrige element",
   "setShNext": "gå til neste element",
   "setShCreateEntry": "lag ny oppføring",
@@ -456,6 +468,36 @@
   "setShCopyUrlGlobal": "kopiér nettside (når appen er i bakgrunnen)",
   "setShAutoTypeGlobal": "autofyll (når appen er i bakgrunnen)",
   "setShLock": "lås database",
+  "setPlInstallTitle": "Installér nye utvidelser",
+  "setPlInstallDesc": "KeeWeb-utvidelser legger til nye funksjoner, drakter og språk i KeeWeb. Utvidelser kjører med samme rettigheter som KeeWeb, de har tilgang til og kan behandle alle dine passord. Installér aldri utvidelser som du ikke stoler på.",
+  "setPlInstallLabel": "Utvidelsens URL",
+  "setPlInstallBtn": "Installér",
+  "setPlInstallBtnProgress": "Installerer",
+  "setPlUninstallBtn": "Avinstallér",
+  "setPlDisableBtn": "Deaktivér",
+  "setPlEnableBtn": "Aktivér",
+  "setPlUpdateBtn": "Oppdatér",
+  "setPlLocaleBtn": "Bytt til dette språket",
+  "setPlThemeBtn": "Bytt til denne drakten",
+  "setPlJs": "kode",
+  "setPlCss": "stiler",
+  "setPlLoc": "språk",
+  "setPlCreatedBy": "Laget av {}",
+  "setPlLoadTime": "lastet på {}",
+  "setPlLastUpdate": "Sist sjekket for oppdateringer",
+  "setPlLoadError": "feil ved lasting av utvidelse",
+  "setPlGalleryLoading": "Laster utvidelser, vennligst vent litt",
+  "setPlGalleryLoadError": "Feil ved lasting av utvidelser",
+  "setPlInstallUrlTitle": "Legg til utvidelse fra URL",
+  "setPlInstallUrlDesc": "Hvis utvidelsen ikke finnes i galleriet, kan du installere den manuelt fra URL",
+  "setPlOfficial": "Offisiell KeeWeb-utvidelse",
+  "setPlSearch": "Søk etter utvidelser",
+  "setPlDevelop": "Ønsker du å utvikle egne utvidelser?",
+  "setPlDevelopStart": "Start her",
+  "setPlTranslate": "Eller du kan {}",
+  "setPlTranslateLink": "oversette appen til ditt språk",
+  "setPlAutoUpdate": "Oppdatér automatisk",
+  "setPlLoadGallery": "Last utvidelsesgalleri",
   "setAboutTitle": "Om",
   "setAboutBuilt": "Denne appen er lagd med disse fantastiske verktøyene",
   "setAboutLic": "Lisens",
@@ -498,6 +540,9 @@
   "dropboxLinkApp": "App-mappe (Apps/KeeWeb)",
   "dropboxLinkFull": "Full Dropbox eller vilkårlig mappe",
   "dropboxLinkCustom": "Egen Dropbox-app",
+  "webdavSaveMethod": "Lagringsmetode",
+  "webdavSaveMove": "Last opp midlertidig fil og flytt",
+  "webdavSavePut": "Overskriv kdbx-filen med PUT",
   "launcherSave": "Lagre passorddatabase",
   "launcherFileFilter": "KeePass-filer",
   "authPopupRequired": "Sprettoppvinduer er blokkert",
