--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -388,7 +388,7 @@
   "setGenTryBetaWarningBody": "Proszę zapisać wszystkie pliki i kliknąć ten przycisk ponownie",
   "setGenShowAppLogs": "Pokaż logi aplikacji",
   "setFilePath": "Ścieżka pliku",
-  "setFileStorage": "Ten plik jest otwarty z {}.",
+  "setFileStorage": "Ten plik jest wczytany z {}.",
   "setFileIntl": "Ten plik jest przechowywany w wewnętrznym magazynie aplikacji",
   "setFileLocalHint": "Chcesz bezproblemowo pracować z plikami lokalnymi?",
   "setFileDownloadApp": "Pobierz aplikację desktopową",
@@ -483,10 +483,10 @@
   "setPlCss": "style",
   "setPlLoc": "język",
   "setPlCreatedBy": "Stworzony przez {}",
-  "setPlLoadTime": "załadowano w {}",
+  "setPlLoadTime": "wczytano w {}",
   "setPlLastUpdate": "Ostatnie sprawdzenie aktualizacji",
-  "setPlLoadError": "błąd ładowania wtyczki",
-  "setPlGalleryLoading": "Ładowanie wtyczek, proszę czekać",
+  "setPlLoadError": "błąd wczytywania wtyczki",
+  "setPlGalleryLoading": "Wczytywanie wtyczek, proszę chwilę poczekać",
   "setPlGalleryLoadError": "Błąd wczytywania wtyczek",
   "setPlInstallUrlTitle": "Dodaj wtyczkę z URL",
   "setPlInstallUrlDesc": "Jeżeli w galerii nie ma wtyczki, możesz ją zainstalować ręcznie z URL",
@@ -497,6 +497,7 @@
   "setPlTranslate": "Albo możesz {}",
   "setPlTranslateLink": "przetłumaczyć tę aplikację na swój język",
   "setPlAutoUpdate": "Aktualizuj automatycznie",
+  "setPlLoadGallery": "Wczytaj galerię wtyczek",
   "setAboutTitle": "O",
   "setAboutBuilt": "Ta aplikacja jest zbudowana za pomocą tych wspaniałych narzędzi",
   "setAboutLic": "Licencja",
