--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -497,6 +497,7 @@
   "setPlTranslate": "Или вы можете {}",
   "setPlTranslateLink": "Перевести приложение на ваш язык",
   "setPlAutoUpdate": "Обновлять автоматически",
+  "setPlLoadGallery": "Загрузить галерею плагинов",
   "setAboutTitle": "О KeeWeb",
   "setAboutBuilt": "Это приложение построено с этими удивительными инструментами",
   "setAboutLic": "Лицензия",
