--- a/docs/translations/ko/ko.json
+++ b/docs/translations/ko/ko.json
@@ -497,6 +497,7 @@
   "setPlTranslate": "또는 {} 할 수 있습니다.",
   "setPlTranslateLink": "앱을 귀하의 언어로 번역하십시오.",
   "setPlAutoUpdate": "자동으로 업데이트",
+  "setPlLoadGallery": "플러그인 갤러리 로드",
   "setAboutTitle": "대하여",
   "setAboutBuilt": "앱 제작에 도움을 준 멋진 도구들",
   "setAboutLic": "저작권",
