--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -497,6 +497,7 @@
   "setPlTranslate": "Або ви можете {}",
   "setPlTranslateLink": "Перекласти програму на вашу мову",
   "setPlAutoUpdate": "Оновлювати автоматично",
+  "setPlLoadGallery": "Завантажити галерею плагінів",
   "setAboutTitle": "Про KeeWeb",
   "setAboutBuilt": "Ця програма створена за допомогою цих дивовижних інструментів",
   "setAboutLic": "Ліцензія",
