--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -258,7 +258,7 @@
   "detSetupOtp": "Одноразовый пароль",
   "detClone": "Сделать копию",
   "detClonedName": "Копировать",
-  "detAutoType": "Авто-тип",
+  "detAutoType": "Авто-ввод",
   "detAutoTypeSettings": "Настройка авто-ввода",
   "detAutoTypeEnabled": "Включение авто-типа для данной записи",
   "detAutoTypeSequence": "Нажатий клавиш",
@@ -288,7 +288,7 @@
   "autoTypeModifiers": "Клавиши-модификаторы",
   "autoTypeKeys": "Ключи",
   "autoTypeLink": "ещё",
-  "autoTypeError": "ошибка авто-типа",
+  "autoTypeError": "ошибка авто-ввода",
   "autoTypeErrorGeneric": "Была ошибка выполнения автоматического типа: {}",
   "autoTypeErrorGlobal": "Для использования глобальных горячих клавиш, сделайте активным окно приложения, в котором хотите ввести пароль",
   "autoTypeErrorNotInstalled": "{} не установлен",
@@ -299,7 +299,7 @@
   "appSecWarn": "Не безопасно!",
   "appSecWarnBody1": "Вы загрузили это приложение через незащищенное соединение. Кто-то может наблюдать за вами и украсть ваши пароли. Мы настоятельно рекомендуем вам остановиться. Вы можете продолжить только, если вы четко понимаете, что вы делаете.",
   "appSecWarnBody2": "Да, ваша база данных в зашифрованном виде, но никто не может гарантировать, что приложение не было изменено на пути к вам.",
-  "appSecWarnBtn": "Я понимаю, что риск, по-прежнему",
+  "appSecWarnBtn": "Я осознаю риск, продолжить",
   "appUnsavedWarn": "Несохраненные изменения!",
   "appUnsavedWarnBody": "У вас есть несохраненные файлы, если вы закроете приложение, изменения будут потеряны.",
   "appDontExitBtn": "Не выходите",
@@ -367,7 +367,7 @@
   "setGenRememberKeyFilesData": "Хранить во внутреннем хранилище приложения",
   "setGenRememberKeyFilesPath": "Запомнить только путь к файлам-ключам",
   "setGenLockInactive": "Авто блокировка, если приложение неактивно",
-  "setGenNoAutoLock": "Не блокировать автом-ки",
+  "setGenNoAutoLock": "Не блокировать автоматически",
   "setGenLockMinutes": "через {} минут",
   "setGenLockHour": "Через час",
   "setGenLockHours": "Через {} часов",
@@ -395,12 +395,12 @@
   "setFileSave": "Сохранить",
   "setFileSaveTo": "Сохранить как ...",
   "setFileClose": "Закрыть",
-  "setFileSync": "Синхр-я",
+  "setFileSync": "Синхронизация",
   "setFileSaveToXml": "XML",
-  "setFileLastSync": "Последняя синхр-я",
+  "setFileLastSync": "Последняя синхронизация",
   "setFileLastSyncUnknown": "неизвестно",
   "setFileSyncInProgress": "идет синхронизация",
-  "setFileSyncError": "ошибка синхр-ции",
+  "setFileSyncError": "Ошибка синхронизации",
   "setFilePass": "Мастер пароль",
   "setFilePassChanged": "пароль был изменен; оставьте поле пустым, чтобы использовать старый пароль",
   "setFileKeyFile": "Файл ключа",
@@ -454,8 +454,8 @@
   "setShClearSearch": "очистить поиск",
   "setShCopyPass": "скопировать пароль или выбранное поле",
   "setShCopyUser": "копировать имя пользователя",
-  "setShCopyUrl": "скопировать  веб-сайт",
-  "setShAutoType": "auto-type selected entry",
+  "setShCopyUrl": "скопировать сайт",
+  "setShAutoType": "Автоввод выбранного элемента",
   "setShPrev": "перейти к предыдущей записи",
   "setShNext": "перейти к следующей записи",
   "setShCreateEntry": "создать запись",
@@ -465,8 +465,8 @@
   "setShSet": "настройки приложения",
   "setShCopyPassGlobal": "копия пароля (если приложение работает в фоновом режиме)",
   "setShCopyUserGlobal": "скопировать пользователя (при свёрнутой программе)",
-  "setShCopyUrlGlobal": "копия веб-сайта (если приложение работает в фоновом режиме)",
-  "setShAutoTypeGlobal": "авто-ввод (при свёрнутой программе)",
+  "setShCopyUrlGlobal": "копия адреса сайта (приложение в фоне)",
+  "setShAutoTypeGlobal": "автоввод (приложение в фоне)",
   "setShLock": "блокировать базу данных",
   "setPlInstallTitle": "Установить новые плагины",
   "setPlInstallDesc": "Плагины для KeeWeb добавляют новые функции, темы и языки. Плагины работают с теми же привилегиями, что и KeeWeb, они могут получать и управлять всеми вашими паролями. Никогда не устанавливайте плагины, которым вы не доверяете.",
