--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -497,6 +497,7 @@
   "setPlTranslate": "或者您也可以{}",
   "setPlTranslateLink": "将此应用翻译为您的语言",
   "setPlAutoUpdate": "自动更新",
+  "setPlLoadGallery": "加载插件库",
   "setAboutTitle": "关于",
   "setAboutBuilt": "此应用使用以下优秀工具构建",
   "setAboutLic": "许可",
