--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -497,6 +497,7 @@
   "setPlTranslate": "Of je kunt {}",
   "setPlTranslateLink": "vertaal de app naar jouw taal",
   "setPlAutoUpdate": "Automatisch aanpassen",
+  "setPlLoadGallery": "Plug-in gallerij laden",
   "setAboutTitle": "Over",
   "setAboutBuilt": "Deze app is gemaakt met de volgende geweldige tools",
   "setAboutLic": "Licentie",
