--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -50,7 +50,7 @@
   "icon": "значок",
   "title": "название",
   "password": "пароль",
-  "user": "пользователь",
+  "user": "имя пользователя",
   "website": "веб-сайт",
   "tags": "теги",
   "notes": "заметки",
@@ -455,7 +455,7 @@
   "setShCopyPass": "скопировать пароль или выбранное поле",
   "setShCopyUser": "скопировать имя пользователя",
   "setShCopyUrl": "скопировать сайт",
-  "setShAutoType": "Автозаполнение выбранной записи",
+  "setShAutoType": "автозаполнение выбранной записи",
   "setShPrev": "перейти к предыдущей записи",
   "setShNext": "перейти к следующей записи",
   "setShCreateEntry": "создать запись",
